[gd_scene load_steps=3 format=3 uid="uid://bomo7ffcoj3tg"]

[ext_resource type="Script" path="res://Scripts/UI/Settings.gd" id="1_h643i"]
[ext_resource type="Texture2D" uid="uid://j1wouckccd57" path="res://Sprites/icon.svg" id="1_sa501"]

[node name="Settings" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h643i")

[node name="Menu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -50.5
offset_right = 35.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="Start" type="Button" parent="Menu"]
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "START"

[node name="Option" type="Button" parent="Menu"]
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "OPTION"

[node name="Exit" type="Button" parent="Menu"]
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "EXIT"

[node name="Options" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.5
offset_top = -33.0
offset_right = 26.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="Video" type="Button" parent="Options/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "VIDEO"

[node name="Audio" type="Button" parent="Options/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "AUDIO"

[node name="BackFromOptions" type="Button" parent="Options"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -22.5
offset_top = -31.0
offset_right = 22.5
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 80
text = "Back"

[node name="Video" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Video"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -277.0
offset_top = -208.0
offset_right = 277.0
offset_bottom = 208.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Video/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FullScreen" type="Label" parent="Video/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
theme_override_font_sizes/font_size = 80
text = "FullScreen"

[node name="Borderless" type="Label" parent="Video/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
theme_override_font_sizes/font_size = 80
text = "Borderless"

[node name="VSync" type="Label" parent="Video/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
theme_override_font_sizes/font_size = 80
text = "VSync"

[node name="VBoxContainer2" type="VBoxContainer" parent="Video/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FullScreen" type="CheckBox" parent="Video/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_icons/unchecked = ExtResource("1_sa501")

[node name="Borderless" type="CheckBox" parent="Video/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_icons/unchecked = ExtResource("1_sa501")

[node name="VSync" type="CheckBox" parent="Video/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_icons/unchecked = ExtResource("1_sa501")

[node name="BackFromVideo" type="Button" parent="Video"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -8.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 80
text = "Back"

[node name="Audio" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Audio"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -406.0
offset_top = -208.0
offset_right = 406.0
offset_bottom = 208.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Audio/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FullScreen" type="Label" parent="Audio/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
theme_override_font_sizes/font_size = 80
text = "Master"

[node name="Borderless" type="Label" parent="Audio/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
theme_override_font_sizes/font_size = 80
text = "Music"

[node name="VSync" type="Label" parent="Audio/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
theme_override_font_sizes/font_size = 80
text = "Sound FX"

[node name="VBoxContainer2" type="VBoxContainer" parent="Audio/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Master" type="HSlider" parent="Audio/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 3

[node name="Music" type="HSlider" parent="Audio/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 3

[node name="Sound FX" type="HSlider" parent="Audio/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 3

[node name="BackFromAudio" type="Button" parent="Audio"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -8.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 80
text = "Back"

[connection signal="pressed" from="Menu/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Menu/Option" to="." method="_on_option_pressed"]
[connection signal="pressed" from="Menu/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Options/VBoxContainer/Video" to="." method="_on_video_pressed"]
[connection signal="pressed" from="Options/VBoxContainer/Audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="Options/BackFromOptions" to="." method="_on_back_from_options_pressed"]
[connection signal="toggled" from="Video/HBoxContainer/VBoxContainer2/FullScreen" to="." method="_on_full_screen_toggled"]
[connection signal="toggled" from="Video/HBoxContainer/VBoxContainer2/Borderless" to="." method="_on_borderless_toggled"]
[connection signal="toggled" from="Video/HBoxContainer/VBoxContainer2/VSync" to="." method="_on_v_sync_toggled"]
[connection signal="pressed" from="Video/BackFromVideo" to="." method="_on_back_from_video_pressed"]
[connection signal="value_changed" from="Audio/HBoxContainer/VBoxContainer2/Master" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="Audio/HBoxContainer/VBoxContainer2/Music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="Audio/HBoxContainer/VBoxContainer2/Sound FX" to="." method="_on_sound_fx_value_changed"]
[connection signal="pressed" from="Audio/BackFromAudio" to="." method="_on_back_from_audio_pressed"]
